--- a/foodAgri/angular.json
+++ b/foodAgri/angular.json
@@ -88,8 +88,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/jqwidgets-ng/jqwidgets/styles/jqx.base.css"
+              "src/styles.css"
             ],
             "scripts": []
           }
