ajout de jqwidget

--- a/foodAgri/package.json
+++ b/foodAgri/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@azure/cosmos": "^3.6.2",
     "@azure/msal-angular": "^1.0.0-beta.4",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
@@ -29,6 +30,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "fontawesome": "^5.6.3",
+    "jqwidgets-ng": "^9.0.0",
     "msal": "^1.2.1",
     "rxjs": "~6.5.3",
     "rxjs-compat": "^6.5.4",
